remove slider images,remove testimonals,fix mob sider video issue

--- a/css/style.css
+++ b/css/style.css
@@ -6703,6 +6703,7 @@ header.simpl .caption .btn-curve {
   .video-bg {
     object-fit: cover;
     height: 100%;
+    transform: none;
   }
 
   .circle-slide .swiper-slide .bg-img {
